# organAIzer

./: .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
src/organAIzer/: cli.py  gdrive.py  gmail.py  pdfread.py
src/organAIzer/cal-providers/: O365.py  gcalendar.py
src/organAIzer/file-providers/: gdrive.py  pdfread.py
src/organAIzer/mail-providers/: gmail.py  imap.py
